fix: index jdk classes with jrt filesystem